k8s/seq/1_seq_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seq
  name: seq
  namespace: codescu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seq
  template:
    metadata:
      labels:
        app: seq
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: "Y"
        image: datalust/seq:latest
        name: seq
        ports:
            - containerPort: 80
            - containerPort: 5341
        volumeMounts:
            - name: seq-storage
              mountPath: "/data"
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: seq-storage
          persistentVolumeClaim:
            claimName: seq-pvc
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Bucharest
