k8s/seq/2_seq_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seq
  namespace: codescu
spec:
  ports:
  - port: 80
    targetPort: 80
    name: "80"
  - port: 5341
    targetPort: 5341
    name: "5341"
  selector:
    app: seq
